@@ -458,6 +458,7 @@ module.exports = function(grunt) {
           'app/bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js',
           'app/bower_components/angular-truncate-2/dist/angular-truncate-2.js',
           'app/bower_components/angular-nvd3/dist/angular-nvd3.js',
+          'app/bower_components/oclazyload/dist/ocLazyLoad.js',
           'app/scripts/app.js',
           'app/scripts/**/*.js',
           'app/plugins/**/*.js',
