@@ -47,6 +47,7 @@
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
     <script src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
+    <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
     <script src="scripts/services/segmentio.js"></script>
     <!-- endbuild -->
 
