@@ -21,8 +21,12 @@ var MODULES = [
   'translation',
   'datatypechecks',
   'nvd3',
-  'pascalprecht.translate'
+  'pascalprecht.translate',
+  'oc.lazyLoad'
 ];
+
+var DEFAULT_PLUGINS = [];
+var ENTERPRISE_PLUGINS = [];
 
 var ROUTING = {
   '/': {
@@ -92,10 +96,65 @@ var loadStylesheet = function(url) {
 // todo: load json from rest endpoint
 $.get('conf/plugins.json', function(plugins) {
 
+  ENTERPRISE_PLUGINS = plugins.filter(function(p) {
+    return p.enterprise;
+  }).map(function(el) {
+    return {
+      name: el.name,
+      files: [el.uri],
+      routing: el.routing
+    };
+  });
+  DEFAULT_PLUGINS = plugins.filter(function(p) {
+    return !p.enterprise;
+  });
 
   //function to create 'crate' module and bootstrap app
   var loadApp = function() {
     app = angular.module('crate', MODULES);
+    app.config(['SQLQueryProvider', 'queryResultToObjectsProvider', '$ocLazyLoadProvider', '$routeProvider',
+      'SettingsProvider',
+      function(SQLQueryProvider, queryResultToObjectsProvider, $ocLazyLoadProvider,
+        $routeProvider, SettingsProvider) {
+
+        var stmt = 'SELECT settings[\'license\'][\'enterprise\'] as enterprise ' +
+          'FROM sys.cluster';
+
+        if(SettingsProvider.$get().enterprise == true){
+          loadStylesheet('static/styles/main-enterprise.css');
+        }
+
+        SQLQueryProvider.$get().execute(stmt)
+          .success(function(query) {
+            var result = queryResultToObjectsProvider.$get()(query, ['enterprise']);
+            SettingsProvider.setEnterprise(result[0].enterprise);
+            if (result[0].enterprise) {
+              loadStylesheet('static/styles/main-enterprise.css');
+
+              $ocLazyLoadProvider.config({
+                modules: ENTERPRISE_PLUGINS,
+                events: true
+              });
+              for (var i = 0; i < ENTERPRISE_PLUGINS.length; i++) {
+                $ocLazyLoadProvider.$get().load(ENTERPRISE_PLUGINS[i].name);
+
+                var routing = ENTERPRISE_PLUGINS[i].routing;
+                if (routing) {
+                  for (var pattern in routing) {
+                    $routeProvider.when(pattern, routing[pattern]);
+                  }
+                }
+              }
+              console.info('Loaded Enterprise Plugins:', ENTERPRISE_PLUGINS.map(function(o) {
+                return o.name;
+              }));
+            }
+          }).error(function() {
+            SettingsProvider.setEnterprise(false);
+            console.info('Failed to load Enterprise settings');
+          });
+      }
+    ]);
 
     app.config(['$routeProvider', '$httpProvider',
       function($routeProvider, $httpProvider) {
@@ -107,8 +166,8 @@ $.get('conf/plugins.json', function(plugins) {
           $routeProvider.when(pattern, ROUTING[pattern]);
         }
         // register routing from plugins
-        for (var i = 0; i < plugins.length; i++) {
-          var routing = plugins[i].routing;
+        for (var i = 0; i < DEFAULT_PLUGINS.length; i++) {
+          var routing = DEFAULT_PLUGINS[i].routing;
           if (routing) {
             for (pattern in routing) {
               $routeProvider.when(pattern, routing[pattern]);
@@ -187,23 +246,23 @@ $.get('conf/plugins.json', function(plugins) {
   };
 
   var promises = [];
-  for (var i = 0; i < plugins.length; i++) {
-    promises.push(loadScript(plugins[i].uri));
-    if (plugins[i].stylesheet) {
-      promises.push(loadStylesheet(plugins[i].stylesheet));
+  for (var i = 0; i < DEFAULT_PLUGINS.length; i++) {
+    promises.push(loadScript(DEFAULT_PLUGINS[i].uri));
+    if (DEFAULT_PLUGINS[i].stylesheet) {
+      promises.push(loadStylesheet(DEFAULT_PLUGINS[i].stylesheet));
     }
   }
 
   $.when.apply($, promises).then(function() {
     console.info('Loaded Modules:', MODULES);
-    console.info('Loaded Plugins:', plugins.map(function(o) {
-      return o.name;
+    console.info('Default Plugins:', DEFAULT_PLUGINS.map(function(el) {
+      return el.name;
     }));
 
     //onSucess: update the modules and load the app
-    for (var i = 0; i < plugins.length; i++) {
-      MODULES.push(plugins[i].name);
-    }
+    MODULES = MODULES.concat(DEFAULT_PLUGINS.map(function(el) {
+      return el.name;
+    }));
     loadApp();
   }, function() {
     //onError: load the app without the plugins
