@@ -24,7 +24,8 @@
     "angular-translate-loader-static-files": "^2.12.0",
     "angular-translate-storage-cookie": "^2.12.0",
     "angular-translate-loader-partial": "^2.12.0",
-    "angular-nvd3": "^1.0.9"
+    "angular-nvd3": "^1.0.9",
+    "oclazyload": "^1.1.0"
   },
   "resolutions": {
     "angular": "~1.5.8",
