@@ -4,7 +4,10 @@ Changes for Crate Admin Interface
 
 Unreleased
 ==========
-  
+
+ - Added Lazy loading of the stylesheet and plugins depending
+   on the enterprise settings.  
+
  - Fixed an issue that caused the notification date to be `null` in safari.
 
  - Added buttons to collapse and expand all schemas in the tables view.
